kubernetes-volumes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-apps-dp
  namespace: homework
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      nodeSelector:
        homework: "true"  
      containers:
      - name: web-server
        image: nginx
        ports:
        - containerPort: 8000
          protocol: TCP
          name: http-web
        volumeMounts:
        - name: shared-data
          mountPath: /homework
        - name: config-volume
          mountPath: /etc/nginx
        - name: custom-index-html
          mountPath: /homework/conf
        readinessProbe:
          httpGet:
            path: /index.html
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 3
      volumes:
      - name: config-volume
        configMap:
          name: nginx-config
      - name: shared-data
        persistentVolumeClaim:
          claimName: pvc200mi
      - name: custom-index-html
        configMap:    
          name: custom-index-html
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
